student structure initial with models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
      - app-network
     environment:
      - NODE_ENV=development
-    command: npm run start:http
+    command: npm run start
     
   client:
     build:
